# software-engineering-project

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/filtered_datasets/rq1/: discussion_sharings.json  placeholder
src/filtered_datasets/rq2/: commit_sharings.csv  commit_sharings.json  discussion_sharings.csv  discussion_sharings.json  issue_sharings.json  pr_sharings.csv  pr_sharings.json
src/filtered_datasets/rq3/: discussion_sharings.json  hn_sharings.json  pr_sharings.json
src/hugging_face_results/: commit_sharings.json  discussion_sharings.json  pr_sharings.json
src/raw_datasets/: README.md
src/rq1/: main.py
src/rq2/: main.py
src/rq2/processed_datasets/: issue_sharings.csv
src/rq3/: data_processing.py  main.py  result_plotting.py  sentiment_analysis.py
src/rq3/processed_datasets/: discussion_sharings.json  hn_sharings.json  pr_sharings.json
src/scripts/: rq1.py  rq2.py  rq3.py  rq3_Hugging_Face.py  rq3_Plot_graphs.py  test copy.ipynb  test.ipynb
src/sentiment_analysis_results/: hn_sharings.json
