[tool.poetry]
name = "software-engineering-project"
version = "0.1.0"
description = ""
authors = ["Rohit Natesh <rohit.natesh95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
