[tool.poetry]
name = "software-engineering-project"
version = "0.1.0"
description = ""
authors = ["Rohit Natesh <rohit.natesh95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.1.3"
matplotlib = "^3.8.1"
seaborn = "^0.13.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
